--- a/site_media/html/usuario_template.html
+++ b/site_media/html/usuario_template.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 <div id="cabecera">
-<h3>Administrador de usuarios</h3>
+<h3>User Addministration</h3>
 <h2>{subtitulo}</h2>
 </div>
 <div id="menu">
-<a href="{VIEW_SET_USER}" title="Nuevo usuario">Agregar usuario </a>
-<a href="{VIEW_GET_USER}" title="Buscar usuario">Buscar/editar usuario</a>
-<a href="{VIEW_DELETE_USER}" title="Borrar usuario">Borrar usuario</a>
+<a href="{VIEW_SET_USER}" title="Nuevo usuario">Add new user</a>
+<a href="{VIEW_GET_USER}" title="Buscar usuario">Search/Edit user</a>
+<a href="{VIEW_DELETE_USER}" title="Borrar usuario">Delete User</a>
 <a href="{VIEW_ALL_USERS}" title="Borrar usuario">Show all Users</a>
 </div>
 <div id="mensaje">
